--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,4 @@ ehthumbs.db
 # Custom files and directories to ignore
 # Add any additional files and directories you want to ignore in your project.
 
+if_data_content/
