config: Pointing the IF.data Scraper routine to the correct file.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "IF.data Scraper",
             "type": "python",
             "request": "launch",
-            "program": "run.py",
+            "program": "scraping.py",
             "console": "integratedTerminal",
             "justMyCode": true
         },
