--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pandas = "^2.2.2"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
 pytest-mock = "^3.12.0"
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
