refactor: change data folder
Data folder was moved to:
    - data/raw for raw data
    - data/processed for processed data

--- a/.gitignore
+++ b/.gitignore
@@ -121,5 +121,4 @@ ehthumbs.db
 # Custom files and directories to ignore
 # Add any additional files and directories you want to ignore in your project.
 
-if_data_content/
-if_data_processed/
+data/
