--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 selenium = "^4.16.0"
 loguru = "^0.7.2"
 pandas = "^2.2.2"
+pydantic = "^2.9.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
