--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ selenium = "^4.16.0"
 loguru = "^0.7.2"
 pandas = "^2.2.2"
 pydantic = "^2.9.2"
+duckdb = "^1.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
