--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ loguru = "^0.7.2"
 pandas = "^2.2.2"
 pydantic = "^2.9.2"
 duckdb = "^1.1.1"
+polars = "^1.32.2"
+pyarrow = "^21.0.0"
+python-fire = "^0.1.0"
+python-dotenv = "^1.1.1"
+fire = "^0.7.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
