--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pyarrow = "^21.0.0"
 python-fire = "^0.1.0"
 python-dotenv = "^1.1.1"
 fire = "^0.7.0"
+pandera = "^0.26.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
